functions and variables (formerly used for Kannada script).

**** `malayalam' and `mlm-util', and all associated malayalam-* and
mlm-* functions and variables (formerly used for Malayalam script).

**** `tamil' and `tml-util, and all associated tamil-* and tml-*
functions and variables (formerly used for Tamil script).


* Lisp Changes in Emacs 23.1

+++
** New primitives `list-system-processes' and `system-process-attributes'
let Lisp programs access the processes that are running on the local
machine.  See the doc strings of these functions for more details.
Not all platforms support accessing this information; on those that
don't, these primitives will return nil.

+++
** New variable `user-emacs-directory'.
Use this instead of "~/.emacs.d".

+++
** If a local hook function has a non-nil `permanent-local-hook'
property, `kill-all-local-variables' does not remove it from the local
value of the hook variable; it remains even if you change major modes.

+++
** `frame-inherited-parameters' lets new frames inherit parameters from
the selected frame.

+++
** New keymap `input-decode-map' overrides like key-translation-map, but
applies before function-key-map.  Also it is terminal-local contrary to
key-translation-map.  Terminal-specific key-sequences are generally added to
this map rather than to function-key-map now.

+++
** `ignore-errors' is now a standard macro (does not require the CL package).

+++
** `interprogram-paste-function' can now return one string or a list
of strings.  In the latter case, Emacs puts the second and following
strings on the kill ring.

+++
** In `condition-case', a handler can specify "let the debugger run first".
You do this by writing `debug' in the list of conditions to be handled,
like this:

    (condition-case nil
	(foo bar)
      ((debug error) nil))

+++
** clone-indirect-buffer now runs the clone-indirect-buffer-hook.

+++
** `beginning-of-defun-function' now takes one argument, the count
given to `beginning-of-defun'.

+++