@@ -1118,6 +1118,8 @@ functions and variables (formerly used for Tamil script).
 
 * Lisp Changes in Emacs 23.1
 
+** New coding system alias `emacs-internal'.
+
 +++
 ** New primitives `list-system-processes' and `system-process-attributes'
 let Lisp programs access the processes that are running on the local
